cluster/manifests/cortex-api/overlays/dev/tls-intercept-proxy/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: tls-intercept-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: tls-intercept-proxy
  mtls:
    mode: STRICT
